--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <body>
 
     <body>
-        <img width="100px" height="120px" src="im.jpg" alt="image" class="arrondie">
-        <table style="width:100" border="1px">
+        <div class="info">
+            <img width="200px" height="180px" src="bio.jpg" alt="image" class="arrondie">
+
 
             <center>
                 <h1>DHAWADI Ines</h1>
@@ -32,127 +33,135 @@
                 <li>
                     Email: inesdhaouadi96@gmail.com</li>
                 <li>
-                    Adresse:6114 Kesra</li>
-            </ul>
-
-            <hr color="black">
-
-            <h2>Etude et diplomes</h2>
-            <ul>
-                <li>
-                    2019/2020:Master en EAEE</li>
-                <li>
-                    2018/2019:licence appliquée en biologie</li>
-                <li>
-                    2014/2015:Baccalauriat en science experimentales</li>
-            </ul>
-            <h2>Expériene professionelles</h2>
-            <table style="width:100" border="1px">
-
-                <thead>
-                    <tr>
-                        <th>stage</th>
-                        <th>date</th>
-                        <th>organisme</th>
-                        <th>tache</th>
-                    </tr>
-                </thead>
-                <tbady>
-                    <tr>
-                        <td>mémoir master</td>
-                        <td>01/02 jusqu'a 01/07/2020</td>
-                        <td>Polina</td>
-                        <td>analyse de risque professionnel</td>
-                    </tr>
-                    <tr>
-                        <td>fin d'étude</td>
-                        <td>01/02 jusqu'a 30/05/2018</td>
-                        <td>SNBG</td>
-                        <td>optimisation de procédé de traitement des eaux</td>
-                    </tr>
-                    <tr>
-                        <td>d'été</td>
-                        <td>moins de janvier 2017</td>
-                        <td>STEG</td>
-                        <td>initiation aux activités du rejet</td>
-                    </tr>
-                    <tr>
-                        <td>d'été</td>
-                        <td>moins de juillet 2016</td>
-                        <td>hoptale militaire d'instruction de tunis</td>
-                        <td>analyse biologique</td>
-                    </tr>
-                </tbady>
-            </table>
-            <h2>Competences</h2>
-            <ul>
-                <li> arc GIS
+                    <marh> Adresse:6114 Kesra </marh>
                 </li>
-                <li>
-                    conduit de projet</li>
-                <li>
-                    audit qualité, sécurité, environnement</li>
-                <li> busines model canvas
-                </li>
-                <li>
-                    économie de l'environnement</li>
-                <li>
-                    gestion du risque</li>
             </ul>
-            <h2>Aptitudes et competences organisationnelles</h2>
-            <ul>
-                <li> Participation à organisation d'évenement Grw-een
-                </li>
-                <li>
-                    Participation à l'événement du printemps de l'environnement </li>
+        </div>
 
-            </ul>
+        <hr color="black">
+        <div class="entet">
 
-            <h2>Certification</h2>
-            <ul>
-                <li> ISO 9001
-                </li>
-                <li>
-                    ISO 14001</li>
-                <li>
-                    ISO 45001</li>
-                <li> Audit : 19011
-                </li>
-                <li>
-                    gestion du risque</li>
-                <li>
-                    hygiéne</li>
-            </ul>
-            <h2>Langue et informatique </h2>
-            <table style="width:100" border="1px">
+            <div class="entet">
+                <h2>Etude et diplomes</h2>
+                <ul>
+                    <li>
+                        2019/2020:Master en EAEE</li>
+                    <li>
+                        2018/2019:licence appliquée en biologie</li>
+                    <li>
+                        2014/2015:Baccalauriat en science experimentales</li>
+                </ul>
+                <h2>Expériene professionelles</h2>
 
-                <thead>
-                    <tr>
-                        <th>langues </th>
-                        <th>informatique</th>
+                <table style="widows: 150px;" border="2px">
 
-                    </tr>
-                </thead>
-                <tbady>
-                    <tr>
-                        <td>arabe:maitrise de la langue arabe</td>
-                        <td>Microsoft office </td>
+                    <thead>
+                        <tr>
+                            <th>stage</th>
+                            <th>date</th>
+                            <th>organisme</th>
+                            <th>tache</th>
+                        </tr>
+                    </thead>
+                    <tbady>
+                        <tr>
+                            <td>mémoir master</td>
+                            <td>01/02 jusqu'a 01/07/2020</td>
+                            <td>Polina</td>
+                            <td>analyse de risque professionnel</td>
+                        </tr>
+                        <tr>
+                            <td>fin d'étude</td>
+                            <td>01/02 jusqu'a 30/05/2018</td>
+                            <td>SNBG</td>
+                            <td>optimisation de procédé de traitement des eaux</td>
+                        </tr>
+                        <tr>
+                            <td>d'été</td>
+                            <td>moins de janvier 2017</td>
+                            <td>STEG</td>
+                            <td>initiation aux activités du rejet</td>
+                        </tr>
+                        <tr>
+                            <td>d'été</td>
+                            <td>moins de juillet 2016</td>
+                            <td>hoptale militaire d'instruction de tunis</td>
+                            <td>analyse biologique</td>
+                        </tr>
+                    </tbady>
+                </table>
 
-                    </tr>
-                    <tr>
-                        <td>français: moyenne</td>
-                        <td>Environnement Windows</td>
 
-                    </tr>
-                    <tr>
-                        <td>anglais: moyenne</td>
-                        <td>Internet</td>
+                <h2>Competences</h2>
+                <ul>
+                    <li> arc GIS
+                    </li>
+                    <li>
+                        conduit de projet</li>
+                    <li>
+                        audit qualité, sécurité, environnement</li>
+                    <li> busin es model canvas
+                    </li>
+                    <li>
+                        économie de l'environnement</li>
+                    <li>
+                        gestion du risque</li>
+                </ul>
+                <h2>Aptitudes et competences organisationnelles</h2>
+                <ul>
+                    <li> Participation à organisation d'évenement Grw-een
+                    </li>
+                    <li>
+                        Participation à l'événement du printemps de l'environnement </li>
 
-                    </tr>
-                    <tr>
-                        <h2>Hobbies</h2>
-                        <p>sport, peinture, cinéphile.</p>
+                </ul>
 
+                <h2>Certification</h2>
+                <ul>
+                    <li> ISO 9001
+                    </li>
+                    <li>
+                        ISO 14001</li>
+                    <li>
+                        ISO 45001</li>
+                    <li> Audit : 19011
+                    </li>
+                    <li>
+                        gestion du risque</li>
+                    <li>
+                        hygiéne</li>
+                </ul>
+                <h2>Langue et informatique </h2>
+                <table style="width:100" border="1px">
+
+                    <thead>
+                        <tr>
+                            <th>langues </th>
+                            <th>informatique</th>
+
+                        </tr>
+                    </thead>
+                    <tbady>
+                        <tr>
+                            <td>arabe:maitrise de la langue arabe</td>
+                            <td>Microsoft office </td>
+
+                        </tr>
+                        <tr>
+                            <td>français: moyenne</td>
+                            <td>Environnement Windows</td>
+
+                        </tr>
+                        <tr>
+                            <td>anglais: moyenne</td>
+                            <td>Internet</td>
+
+                        </tr>
+                        <tr>
+                            <h2>Hobbies</h2>
+                            <p>sport, peinture, cinéphile.</p>
+                        </tr>
+            </div>
     </body>
 
 </html>
